<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_10"
    tools:context=".presentation.CharacterDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/character_card_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/large_margin"
        app:cardCornerRadius="@dimen/character_info_card_corner_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/character_pic"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/character_pic_content_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/test" />

            <TextView
                android:id="@+id/name_label"
                style="@style/label_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/name_label"
                app:layout_constraintStart_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_text"
                style="@style/label_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_spacing_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_label"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/gender_label"
                style="@style/label_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/gender_label"
                app:layout_constraintStart_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/name_text" />

            <TextView
                android:id="@+id/gender_text"
                style="@style/label_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_spacing_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/gender_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gender_label"
                tools:text="@string/gender" />

            <TextView
                android:id="@+id/status_label"
                style="@style/label_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/status_label"
                app:layout_constraintStart_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/gender_text" />

            <TextView
                android:id="@+id/status_text"
                style="@style/label_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_spacing_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/status_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/status_label"
                tools:text="@string/status" />

            <TextView
                android:id="@+id/species_label"
                style="@style/label_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/species_label"
                app:layout_constraintStart_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/status_text" />

            <TextView
                android:id="@+id/species_text"
                style="@style/label_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_spacing_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/species_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/species_label"
                tools:text="@string/species" />

            <TextView
                android:id="@+id/creation_date_label"
                style="@style/label_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/creation_date_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/species_text" />

            <TextView
                android:id="@+id/creation_date_text"
                style="@style/label_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/label_spacing_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintBaseline_toBaselineOf="@id/creation_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/creation_date_label"
                tools:text="@string/creation_date" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>